minor alignment fix

--- a/html/css/style.css
+++ b/html/css/style.css
@@ -116,7 +116,7 @@ body{
     width: 20px;
     position: absolute;
     display:none;
-    left:320px;
+    left:90%;
     top: 5px;
 }
 
